trying really hard to make some questionable graphic decisions

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,4 +1,8 @@
 html {
     background-color: #aaff;
+}
+
+nav {
     font-family: 'Courier New', Courier, monospace;
+    border-color: #a2b322;
 }
