--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -4,5 +4,49 @@ html {
 
 nav {
     font-family: 'Courier New', Courier, monospace;
-    border-color: #a2b322;
+    border: 4px solid #a2b322;
+}
+
+body {
+    display: grid;
+    height: 100vh;
+    grid-template: auto 1fr auto / 300px 1fr auto;
+    border: 8px solid #f100d5;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+head {
+    background: lightpink;
+    padding: 2rem;
+    grid-column: 1 / 4;
+}
+
+.left-sidebar {
+    background: lightblue;
+    grid-column: 1 / 2;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  main {
+    background: rgb(255, 113, 62);
+    grid-column: 2 / 3;
+  }
+
+  .right-sidebar {
+    background: yellow;
+    grid-column: 3 / 4;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+
+  footer {
+    background: wheat;
+    padding: 2rem;
+    text-align: center;
+    grid-column: 1 / 4;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  }
+
+  .left-sidebar,
+.right-sidebar {
+  padding: 1rem;
 }
