--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -15,7 +15,7 @@ body {
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-head {
+header {
     background: lightpink;
     padding: 2rem;
     grid-column: 1 / 4;
