--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -1,3 +1,7 @@
 header {
-    background-color: rgb(199, 164, 255);
+    border: 5px solid gold;
+}
+
+body {
+    background-color: rgb(255, 173, 196);
 }
