we're getting closer and closer to matching the vibes of the screenshot they showed us

--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -1,7 +1,17 @@
 header {
     border: 5px solid gold;
+    font-family: cursive;
 }
 
 body {
     background-color: rgb(255, 173, 196);
+}
+
+nav {
+    background-color: rgb(255, 172, 255);
+    text-align: center;
+}
+
+.description {
+    text-align: center;
 }
