--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -15,3 +15,15 @@ nav {
 .description {
     text-align: center;
 }
+
+h1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 20px 10px;
+}
