--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -8,22 +8,22 @@ body {
 }
 
 nav {
-    background-color: rgb(255, 172, 255);
+    background-color: rgb(218, 172, 255);
     text-align: center;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .description {
     text-align: center;
 }
 
-h1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 20px 10px;
+nav a:hover {
+	text-decoration: gold overline;
+}
+
+main {
+    max-width: 300px;
+    margin-left: 30%;
+    margin-right: 30%;
 }
