--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -25,8 +25,8 @@ nav a:hover {
 }
 
 main {
-    max-width: 300px;
-    margin-left: 30%;
-    margin-right: 30%;
+    grid-column: 2 / 3;
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 1.5rem;
 }
