--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -25,11 +25,20 @@ nav a:hover {
 }
 
 main {
-    grid-column: 2 / 3;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: inline-grid;
+    max-width: 100%;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: auto;
     row-gap: 1.5rem;
+    column-gap: .5rem;
     border: 3px solid rgb(180, 157, 248);
+}
+
+.card {
+    border: 4px solid rgb(157, 132, 239);
+    border-radius: 10px;
+    padding: 3px;
+    background-color: rgb(255, 142, 225);
 }
 
 footer {
