--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -3,7 +3,7 @@ header {
 }
 
 body {
-    background-color: rgb(255, 173, 196);
+    background-color: rgb(251, 187, 205);
     font-family: "Old Standard TT", serif;
     font-weight: 400;
     font-style: normal;
@@ -27,11 +27,13 @@ nav a:hover {
 main {
     display: inline-grid;
     max-width: 100%;
-    grid-template-columns: repeat(2, 50%);
+    padding: 5px;
+    grid-template-columns: repeat(2, calc(50% - 0.25rem));
     grid-template-rows: auto;
     row-gap: 1.5rem;
     column-gap: .5rem;
     border: 3px solid rgb(180, 157, 248);
+    background-color: rgb(255, 209, 209);
 }
 
 .card {
