--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -22,6 +22,7 @@ nav {
 
 nav a:hover {
 	text-decoration: gold overline;
+	color: gold;
 }
 
 main {
@@ -39,7 +40,7 @@ main {
 .card {
     border: 4px solid rgb(157, 132, 239);
     border-radius: 10px;
-    padding: 3px;
+    padding: 0px;
     background-color: rgb(255, 142, 225);
 }
 
@@ -57,4 +58,32 @@ h1 {
 
 h2 {
     font-size: large;
+}
+
+
+.lilminiheader {
+    text-align: center;
+    background-color: blanchedalmond;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    padding: 3px;
+    width: calc(100% - 6px);
+}
+
+.another_header {
+    text-align: center;
+    background-color: blanchedalmond;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    padding-top: 2px;
+    padding-right: 6px;
+    width: calc(100% - 6px);
+}
+
+.web-dev {
+    margin: 0px;
+}
+
+img {
+    height: 150px;
 }
